test/invalid/preprocessor_define.d
//T error: preprocessor_define.d:4:1:
//T error: C preprocessor directive `#define` is not supported.

#define FOO 1
